// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VoteReceipt matches snapshot for Abstain vote 1`] = `
<div
  className="bg-emerald-50 border border-emerald-200 rounded-xl p-4"
>
  <p
    className="text-emerald-800 font-medium"
  >
    Your vote (
    <span
      className="text-slate-500"
    >
      Abstain
    </span>
    ) has been recorded.
  </p>
  <p
    className="text-sm text-emerald-700 mt-1"
  >
    Voting power: 
    100
     NEB
  </p>
</div>
`;

exports[`VoteReceipt matches snapshot for Against vote 1`] = `
<div
  className="bg-emerald-50 border border-emerald-200 rounded-xl p-4"
>
  <p
    className="text-emerald-800 font-medium"
  >
    Your vote (
    <span
      className="text-rose-600"
    >
      Against
    </span>
    ) has been recorded.
  </p>
  <p
    className="text-sm text-emerald-700 mt-1"
  >
    Voting power: 
    300
     NEB
  </p>
</div>
`;

exports[`VoteReceipt matches snapshot for For vote 1`] = `
<div
  className="bg-emerald-50 border border-emerald-200 rounded-xl p-4"
>
  <p
    className="text-emerald-800 font-medium"
  >
    Your vote (
    <span
      className="text-emerald-600"
    >
      For
    </span>
    ) has been recorded.
  </p>
  <p
    className="text-sm text-emerald-700 mt-1"
  >
    Voting power: 
    500
     NEB
  </p>
</div>
`;

exports[`VoteReceipt matches snapshot with reason string 1`] = `
<div
  className="bg-emerald-50 border border-emerald-200 rounded-xl p-4"
>
  <p
    className="text-emerald-800 font-medium"
  >
    Your vote (
    <span
      className="text-emerald-600"
    >
      For
    </span>
    ) has been recorded.
  </p>
  <p
    className="text-sm text-emerald-700 mt-1"
  >
    Voting power: 
    500
     NEB
  </p>
  <p
    className="text-sm text-emerald-700 mt-1 italic"
  >
    "
    This proposal aligns with our governance goals.
    "
  </p>
</div>
`;
